2007-03-30 19:22 -0700  Brendan Cully  <brendan@kublai.com>  (e9451c4c0092)

	* imap/imap.c, mutt.h, mx.c, pop.c: Add function pointer for close
	hook in Context. Slowly inch towards function pointers instead of
	switch statements.

	* imap/command.c, imap/imap.c: Use RECENT for first mailbox
	check if header cache check fails

	* imap/command.c: Consult header cache if available for last known new
	mail count. This prevents mutt from announcing new mail in mailboxes
	that have unseen, but not new, messages, if those mailboxes are in
	the header cache.

2007-03-29 21:08 -0700  Brendan Cully  <brendan@kublai.com>  (359d9fbb5fda)

	* sendlib.c: Do not page sendmail error in batch mode.
	(closes: #2800)

2007-03-29 15:53 -0700  Rocco Rutte  <pdmef@gmx.net>  (798a40b0a9da)

	* rfc3676.c: f=f handler: Re-add space between quotes and text

2007-03-29 15:47 -0700  Brendan Cully  <brendan@kublai.com>  (51d13afbf24b)

	* doc/Makefile.am: Make -j2 in doc work (closes: #2538)

2007-03-29 15:23 -0700  Christoph Berg  <cb@df7cb.de>  (0514e6b5a67a)

	* init.c, init.h: Use ~/.muttrc as the default alias_file if no user
	muttrc exists. Makes the code agree with the documentation. Document
	that default is actually the used muttrc. (Closes Debian #226500.)

2007-03-29 10:30 -0700  Brendan Cully  <brendan@kublai.com>  (034ad0e55397)

	* bcache.c, bcache.h, imap/message.c: Make message cache write to
	temporary location until file is complete. Previously mutt trusted
	the cache file even when it was incomplete, causing permanently
	incorrect message display if the fetch was interrupted for some
	reason.

2007-03-28 09:43 +0200  Thomas Roessler  <roessler@does-not-exist.org>  (25cbd5588d35)

	* alias.c: Fix debug message for mutt_adr_is_user

2007-03-23 10:32 -0700  Brendan Cully  <brendan@kublai.com>  (888a57a2b5f2)

	* imap/browse.c: Reset list.name before each list response in
	folder browser

2007-03-22 14:36 +0100  Thomas Roessler  <roessler@does-not-exist.org>  (68cfab02b411)
